tests/type/errors/bad-mixed-array.xi
foo() {
    i:int[][] = {{}, {true}, {1}}
}